--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="carousel">
                 <div class="carousel-track" id="all-track">
                     <div class="carousel-item"><img src="https://m.media-amazon.com/images/I/41gBzGDn3XL._SY445_SX342_.jpg" alt="Livro 1"></div>
-                    <div class="carousel-item"><img src="https://media.fstatic.com/70kaOm81JkOXLT1oJBcl3IdlYhw=/210x312/smart/filters:format(webp)/media/movies/covers/2018/05/MV5BZjZmYTQ3OTktODkzYy00YmQxLTgxMjEtY2ZkZDY4MDYzNDNmXkEyXkFqcGdeQX_dglouNK.jpg" alt="Filme 1"></div>
+                    <div class="carousel-item"><img src="https://static.wikia.nocookie.net/dccomics/images/c/ce/Ad%C3%A3o_Negro_Poster.png/revision/latest?cb=20230501222259&path-prefix=pt" alt="Filme 1"></div>
                     <div class="carousel-item"><img src="https://s5.static.brasilescola.uol.com.br/be/2023/09/capa-do-livro-o-pequeno-principe-de-antoine-de-saint-exupery-publicado-pela-faro-editorial.jpg" alt="Livro 2"></div>
                     <div class="carousel-item"><img src="https://static.wikia.nocookie.net/dublagem/images/5/57/Um_maluco.jpeg/revision/latest?cb=20220312005832&path-prefix=pt-br" alt="Filme 2"></div>
                     <div class="carousel-item"><img src="https://cdn.kobo.com/book-images/cb801ad0-3cc3-40b3-913c-d5da682f591c/353/569/90/False/o-gato-preto-e-outros-contos.jpg" alt="Livro 3"></div>
