--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="carousel-item"><img src="https://a-static.mlcdn.com.br/800x560/poster-cartaz-homem-aranha-sem-volta-para-casa-c-pop-arte-poster/poparteskins2/15938541960/01e21ac5db78cdb615cfec87d0dabfcd.jpeg"Filme 2"></div>
                     <div class="carousel-item"><img src="https://cdn.kobo.com/book-images/cb801ad0-3cc3-40b3-913c-d5da682f591c/353/569/90/False/o-gato-preto-e-outros-contos.jpg" alt="Livro 3"></div>
                     <div class="carousel-item"><img src="https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/97/52/82/20534159.jpg" alt="Filme 3"></div>
-                    <div class="carousel-item"><img src="https://static.wikia.nocookie.net/dublagem/images/9/9a/Vov%C3%B3zona.jpeg/revision/latest?cb=20230815221050&path-prefix=pt-br" alt="Livro 4"></div>
+                    <div class="carousel-item"><img src="https://sm.ign.com/t/ign_br/screenshot/default/50930-520x520_ax9b.960.jpg" alt="Livro 4"></div>
                     <div class="carousel-item"><img src="https://br.web.img3.acsta.net/c_310_420/pictures/16/03/17/23/42/509402.jpg" alt="Filme 4"></div>
                 </div
             </div>
